fix: padding top on mobile for artist list

--- a/src/styles/experience.scss
+++ b/src/styles/experience.scss
@@ -281,6 +281,7 @@
     }
   }
   .artist_list {
+    padding-top: 46px;
     .container {
       padding: 0 20px;
       border: none;
